@@ -1,15 +1,15 @@
 #define DEFAULT_FIFO "/tmp/ghosd-fifo"
 
-#define DEFAULT_BODY_ALIGN "center"
-#define DEFAULT_BODY_BAR_VALUE 50
-#define DEFAULT_BODY_BAR_HEIGHT 40
-#define DEFAULT_BODY_BAR_WIDTH 80
 #define DEFAULT_BODY_COLOR                                                     \
     {                                                                          \
         1, 1, 1, 1                                                             \
     }
-#define DEFAULT_BODY_FONT "monospace 12"
 #define DEFAULT_BODY_TYPE "text"
+#define DEFAULT_BODY_BAR_VALUE 50
+#define DEFAULT_BODY_BAR_HEIGHT 40
+#define DEFAULT_BODY_BAR_WIDTH 80
+#define DEFAULT_BODY_TEXT_ALIGN "center"
+#define DEFAULT_BODY_TEXT_FONT "monospace 12"
 
 #define DEFAULT_TITLE_ALIGN "center"
 #define DEFAULT_TITLE_COLOR                                                    \
@@ -23,8 +23,8 @@
         0, 0, 0, 1                                                             \
     }
 #define DEFAULT_WINDOW_MARGIN 40
-#define DEFAULT_WINDOW_POS_X POSITION_CENTER
-#define DEFAULT_WINDOW_POS_Y POSITION_CENTER
+#define DEFAULT_WINDOW_POSITION_X POSITION_CENTER
+#define DEFAULT_WINDOW_POSITION_Y POSITION_CENTER
 #define DEFAULT_WINDOW_SIZE_X 640
 #define DEFAULT_WINDOW_SIZE_Y 480
 #define DEFAULT_WINDOW_TIMEOUT 1000
