@@ -80,13 +80,13 @@ Sets the width of the bar, as a percentage of the body area.
 
 ==== Text
 
-===== body-align _<align>_
-Sets the alignment of the main body area.
+===== body-text-align _<align>_
+Sets the alignment of the text in the main body area.
 
-===== body-font _<font>_
-Sets the font of the main body area.
+===== body-text-font _<font>_
+Sets the font of the text in the main body area.
 
-===== body-msg _<string>_
+===== body-text-value _<string>_
 Sets the text of the main body area.
 
 === Title
@@ -100,7 +100,7 @@ Sets the color of the title.
 ===== title-font _<font>_
 Sets the font of the title.
 
-===== title-msg _<string>_
+===== title-value _<string>_
 Sets the text of the title.
 
 === Window
@@ -111,7 +111,7 @@ Sets the color of the background.
 ===== window-margin _<size>_
 Sets the margin of the window.
 
-===== window-pos _<geometry>_
+===== window-position _<geometry>_
 Sets the position of the window on the screen, as an offset of the top left window
 corner from the top left screen corner.
 
