@@ -163,17 +163,17 @@ Sets the width of the bar, as a percentage of the body area\&.
 \fBText\fR
 .RS 4
 .PP
-\fIbody\-align <align>\fR
+\fIbody\-text\-align <align>\fR
 .RS 4
-Sets the alignment of the main body area\&.
+Sets the alignment of the text in the main body area\&.
 .RE
 .PP
-\fIbody\-font <font>\fR
+\fIbody\-text\-font <font>\fR
 .RS 4
-Sets the font of the main body area\&.
+Sets the font of the text in the main body area\&.
 .RE
 .PP
-\fIbody\-msg <string>\fR
+\fIbody\-text\-value <string>\fR
 .RS 4
 Sets the text of the main body area\&.
 .RE
@@ -195,7 +195,7 @@ Sets the color of the title\&.
 Sets the font of the title\&.
 .RE
 .PP
-\fItitle\-msg <string>\fR
+\fItitle\-value <string>\fR
 .RS 4
 Sets the text of the title\&.
 .RE
@@ -211,7 +211,7 @@ Sets the color of the background\&.
 Sets the margin of the window\&.
 .RE
 .PP
-\fIwindow\-pos <geometry>\fR
+\fIwindow\-position <geometry>\fR
 .RS 4
 Sets the position of the window on the screen, as an offset of the top left window corner from the top left screen corner\&.
 .RE
